# diffusion2D

./: setup.cfg
mullamm_diffusion2d/: diffusion2d.py  output.py
mullamm_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
