[metadata]
name = mullamm_diffusion2d
version = 0.0.2
author = Mahek Mulla
description = A 2D diffusion solver example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mahek-mulla/diffusion2D.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib